--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
 		"gulp-wp-pot": "^2.4.2",
 		"gulp-zip": "^5.0.1",
 		"kss": "^3.0.1"
+	},
+	"dependencies": {
+		"kind-of": "^6.0.3",
+		"minimist": "^1.2.5"
 	}
 }
